--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -1542,6 +1542,10 @@ h2.price {
     margin: 30px 0 20px;
 }
 
+.product-details .product-options .text-danger {
+	margin-top: -17px;
+}
+
 .product-details .product-options .form-group {
     display: block;
 }
@@ -1563,6 +1567,10 @@ h2.price {
         vertical-align: top;
         margin-right: 30px;
     }
+}
+
+.product-details .product-options .option-data .date {
+	margin-bottom: 20px;
 }
 
 .product-details .product-options .option-time {
