--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -2163,6 +2163,8 @@ h2.price {
 .ticket {
 	border-left: 4px solid #cd4e37;
 	padding: 0 8px;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .ticket .ticket-img,
