--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -2571,7 +2571,7 @@ h2.price {
 /*--------Spinner---------------*/
 .spinner {
     display:none;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     top: 0px;
@@ -2599,7 +2599,7 @@ h2.price {
 
 .sk-cube-grid {
     position: relative;
-    top: 45%;
+    top: 40%;
     width: 90px;
     height: 90px;
     margin: 0px auto;
