--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -2347,6 +2347,12 @@ h2.price {
     margin-top: 0;
 }
 
+.agent .agent__data input {
+    max-width: 160px;
+    padding: 8px;
+    margin-top: 10px;
+}
+
 .checkout-checkout #guest-data {
 	margin-top: 0px;
 }
