--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -2320,38 +2320,48 @@ h2.price {
 
 
 .checkout-checkout .agent {
-    text-align: right;
-}
-
-.agent .agent__data {
     display: inline-block;
-    text-align: left;
     margin-top: -20px;
     margin-right: -20px;
     margin-bottom: 20px;
+}
+
+@media (min-width: 800px) {
+    .checkout-checkout .agent {
+        float: right;
+        margin-top: 0;
+    }  
+}
+
+.agent .agent__data {
     padding: 15px;
     font-size: 16px;
     border: 2px solid #cd4e37;
     border-right: 0;
 }
 
-@media (min-width: 800px) {
-    .agent .agent__data {
-        float: right;
-        margin-top: 0;
-    }  
-}
+
 
 .agent .agent__data h4 {
     font-size: 18px;
     margin-top: 0;
 }
 
-.agent .agent__data input {
-    max-width: 160px;
+.agent .control-number {
+    margin-bottom: 20px;
+    padding: 15px 15px 15px 0;
+}
+
+.agent .control-number input{
+    max-width: 180px;
     padding: 8px;
     margin-top: 10px;
 }
+
+.agent ::-webkit-input-placeholder {font-size: 16px;}
+.agent ::-moz-placeholder          {font-size: 16px;}
+.agent :-moz-placeholder           {font-size: 16px;}
+.agent :-ms-input-placeholder      {font-size: 16px;}
 
 .checkout-checkout #guest-data {
 	margin-top: 0px;
